# sax-svn

./: .archive  .build  .cvsd  .doit  .id  .svnd  .version  Makefile
api/: xapi.cpp  xapi.h  xapi.pro  xrun.pl
api/common/: qx.cpp
api/data/: KbdLanguage
api/pixmaps/: about.xpm  accessx.xpm  multi.xpm
api/tools/: getINF  getlinked
locale/: .fuzzy  .locale  sax.changes
locale/sax-template/: sax.pot
modules/: HashMap.pm  ParseConfig.pm
modules/create/: header.pm  input.pm
parse/: parse.pl
perl/: Readline-1.13.dif
rpm/: sax2.changes  sax2.spec
sax-branches/SaX2-47-SuSE-91/: .version
sax-branches/SaX2-47-SuSE-91-Devel/: xc.pl
sax-branches/SaX2-48-SuSE-91-Devel/: .archive  .doit  Makefile
sax-branches/SaX2-48-SuSE-91-SUN-JDS-Devel/: init.pl
sax-branches/SaX2-48-SuSE-92-Devel/: Makefile
sax-branches/SaX2-48-SuSE-93-Devel/: Makefile
sax-branches/SaX2-48-SuSE-93-Devel/tools/xmset/: Makefile.am
sax-branches/SaX2-71-SuSE-10-1-Devel/: .cards.pl  .doit  init.pl
sax-branches/SaX2-81-SuSE-10-2-Devel/: init.pl
sax-branches/SaX2-81-SuSE-10-3-Devel/: Makefile
sax-branches/SaX2-81-SuSE-11-1-Devel/: Makefile
sax-head/: .build  .doit  .ftp  .locale  .setup  .svnd  .xsload  Makefile  init.pl  test_flag  xc.pl
sax-head/api/: .make  Makefile  config.h  data.h  dialog.h  file.cpp  file.h  frame.cpp  frame.h  keyboard.cpp  keyboard.h  message.cpp  message.h  monitor.cpp  monitor.h  mouse.cpp  mouse.h  profile.h  tablet.cpp  tablet.h  template.cpp  template.h  touchscreen.cpp  touchscreen.h  vnc.cpp  vnc.h  wrapper.h  xapi.cpp  xapi.h  xapi.pro  xbox.cpp  xbox.h  xidle.cpp  xinfo.cpp  xprogress.cpp  xprogress.h  xquery.cpp  xrun.pl  xtab.cpp  xtab.h
sax-head/cpi/: Makefile  capi.cpp  capi.h  capi.pro  glinfo.cpp  glinfo.h
sax-head/doc/: Makefile  README  appendix-api.tex  appendix-batch.tex  appendix-options.tex  bindings.tex  construction.tex  error.tex  examples.tex  interface.tex  intro.tex  isax.tex  libsax.tex  sax.tex  sysp.tex  thread.tex  tuning.tex
sax-head/libsax/: .make  Makefile  card.cpp  card.h  config.cpp  config.h  desktop.cpp  desktop.h  device.cpp  device.h  exception.h  (+28 more)
sax-head/tools/wrap/: Makefile.am  catch.c  fake.c  wrap.c
sax-head/tools/xmset/: Makefile.am  check_wheel.sh  hwdata.h  mouse.c  string.c  xmset.c  xupdate.pl
sax-tags/SaX2-47-SuSE-90/tools/xkbset/: Makefile.am
sax-tags/SaX2-48-SuSE-91/tools/wrap/: Makefile.am  catch.c  xlook.h
startup/: sax.sh
sysp/: d3.c  keyboard.c  server.h  sysp.h
xfine/: .make  frame.cpp
(+2005 files in other folders)
